[package]
name = "node-executor"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate node implementation in Rust."
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4" }
node-primitives = { version = "2.0.0", path = "../primitives" }
node-runtime = { version = "2.0.0", path = "../runtime" }
sc-executor = { version = "0.8.0" }
sp-core = { version = "2.0.0" }
sp-io = { version = "2.0.0" }
sp-state-machine = { version = "0.8.0" }
sp-trie = { version = "2.0.0" }
trie-root = "0.16.0"
frame-benchmarking = { version = "2.0.0" }

[dev-dependencies]
criterion = "0.3.0"
frame-support = { version = "2.0.0" }
frame-system = { version = "2.0.0" }
node-testing = { version = "2.0.0", path = "../testing" }
pallet-balances = { version = "2.0.0" }
pallet-contracts = { version = "2.0.0" }
pallet-grandpa = { version = "2.0.0" }
pallet-im-online = { version = "2.0.0" }
pallet-indices = { version = "2.0.0" }
pallet-session = { version = "2.0.0" }
pallet-timestamp = { version = "2.0.0" }
pallet-transaction-payment = { version = "2.0.0" }
pallet-treasury = { version = "2.0.0" }
sp-application-crypto = { version = "2.0.0" }
sp-runtime = { version = "2.0.0" }
sp-externalities = { version = "0.8.0" }
#substrate-test-client = { version = "2.0.0" }
wat = "1.0"

[features]
wasmtime = [
	"sc-executor/wasmtime",
]
wasmi-errno = [
	"sc-executor/wasmi-errno",
]
stress-test = []

[[bench]]
name = "bench"
harness = false
