[package]
name = "sc-service-test"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
publish = false
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
hex-literal = "0.3.1"
tempfile = "3.1.0"
tokio = "0.1.22"
futures01 = { package = "futures", version = "0.1.29" }
log = "0.4.8"
fdlimit = "0.2.0"
parking_lot = "0.10.0"
sc-light = { version = "2.0.0" }
sp-blockchain = { version = "2.0.0" }
sp-api = { version = "2.0.0" }
sp-state-machine = { version = "0.8.0" }
sp-externalities = { version = "0.8.0" }
sp-trie = { version = "2.0.0" }
sp-storage = { version = "2.0.0" }
sc-client-db = { version = "0.8.0", default-features = false }
futures = { version = "0.3.1", features = ["compat"] }
sc-service = { version = "0.8.0", default-features = false, features = ["test-helpers"] }
sc-network = { version = "0.8.0" }
sp-consensus = { version = "0.8.0" }
sp-runtime = { version = "2.0.0" }
sp-core = { version = "2.0.0" }
sp-transaction-pool = { version = "2.0.0" }
substrate-test-runtime = { version = "2.0.0", path = "../../../test-utils/runtime" }
substrate-test-runtime-client = { version = "2.0.0", path = "../../../test-utils/runtime/client" }
sc-client-api = { version = "2.0.0" }
sc-block-builder = { version = "0.8.0" }
sc-executor = { version = "0.8.0" }
sp-panic-handler = { version = "2.0.0" }
parity-scale-codec = "1.3.4"
sp-tracing = { version = "2.0.0" }
