[package]
authors = ["Mogwaicoin"]
edition = "2018"
name = "pallet-dotmog"
version = "2.0.0"
license = "Unlicense"
homepage = "https://www.mogwaicoin.org"
repository = "https://github.com/substrate-developer-hub/substrate-dmog/"
description = "FRAME pallet dmog for defining custom runtime logic."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }

frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }
sp-std = { default-features = false, version = '2.0.0' }
rand_chacha = { default-features = false, version = '0.2.1' }

[dev-dependencies]
sp-core = { default-features = false, version = '2.0.0' }
sp-io = { default-features = false, version = '2.0.0' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-core/std',
    'rand_chacha/std',
]
